Visualize rhyme score close #23

--- a/web_app/css/main.css
+++ b/web_app/css/main.css
@@ -83,3 +83,11 @@ ul li {
   padding-right: 9px;
   line-height: 1.5em;
 }
+
+.good-match {
+  font-weight: bold;
+}
+
+.bad-match {
+  opacity: .66;
+}
