--- a/templates/index.html
+++ b/templates/index.html
@@ -48,5 +48,53 @@
     Me finn ingen ord som rimar på {{ text }}
   </h3>
 {% endif %}
+{% if not text %}
+<h2>Om Nynorsk Rimordbok</h2>
+<p>
+  På denne nettstaden er det mogleg å søkje på rimord (enderim) i det
+  nynorske skriftspråket. Til dømes om ein vil ha eit rimord
+  til <a href="/?q=hotell">"hotell"</a>, kjem det opp ord
+  som <a href="/?q=hagestell">"hagestell"</a>. Eit utheva ord
+  rimar mest på søkjeordet. Orda er gruppert på stavingar for å gjere det enkelt å finne
+  ord som passar til rytmen/flyten i diktet, talen, raplåten eller songen du skriv.
+</p>
+<p>
+  Nettstaden er laga i samband med diktinga til ARU Stories
+  <a href="https://arustories.com" target="_blank" rel="noopener">ARU Stories</a>.
+  Hos ARU Stories kan ein lese og høyre små historiar og dikt for
+  store og små, samt lese små teikneseriestriper og sjå korte videosnuttar.
+</p>
+<p>
+  Dette prosjektet har open kjeldekode, som ein finn på
+  <a href="https://github.com/iver56/nynorsk-rimordbok" target="_blank" rel="noopener">github.com/iver56/nynorsk-rimordbok</a>.
+  Har du forslag til forbetringar, kan du leggje til ein
+  <a href="https://github.com/iver56/nynorsk-rimordbok/issues/new" target="_blank" rel="noopener">"issue"</a> på
+  github.
+</p>
 
+<div class="mark">
+  <p>Laga av:</p>
+  <ul class="list">
+    <li>Iver Jordal (<a href="https://github.com/iver56/" target="_blank" rel="noopener">github.com/iver56/</a>)</li>
+    <li>Rune Eikemo - ARU Stories (<a href="https://github.com/eikenottt/" target="_blank" rel="noopener">github.com/eikenottt/</a>)</li>
+  </ul>
+</div>
+
+{% endif %}
+
+{% endblock %}
+
+{% block footer %}
+{% if groups and text %}
+<footer id="footer">
+  <div>
+    <img class="logo" src="/img/logo_2.svg" alt="NR">
+    <h4>Nynorsk Rimordbok</h4>
+    <ul>
+      <li><a href="/">Om Nynorsk Rimordbok</a></li>
+      <li><a href="https://arustories.com" target="_blank" rel="noopener">arustories.com</a></li>
+    </ul>
+  </div>
+</footer>
+{% endif %}
 {% endblock %}
