Remove redundant reference to ARU Stories

--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,7 @@
   ord som passar til rytmen/flyten i diktet, talen, raplåten eller songen du skriv.
 </p>
 <p>
-  Nettstaden er laga i samband med diktinga til ARU Stories
+  Nettstaden er laga i samband med diktinga til
   <a href="https://arustories.com" target="_blank" rel="noopener">ARU Stories</a>.
   Hos ARU Stories kan ein lese og høyre små historiar og dikt for
   store og små, samt lese små teikneseriestriper og sjå korte videosnuttar.
