--- a/templates/index.html
+++ b/templates/index.html
@@ -65,7 +65,7 @@
   store og små, samt lese små teikneseriestriper og sjå korte videosnuttar.
 </p>
 <p>
-  Dette prosjektet har open kjeldekode, som ein finn på
+  Nynorsk rimordbok har open kjeldekode, som ein finn på
   <a href="https://github.com/iver56/nynorsk-rimordbok" target="_blank" rel="noopener">github.com/iver56/nynorsk-rimordbok</a>.
   Har du forslag til forbetringar, kan du leggje til ein
   <a href="https://github.com/iver56/nynorsk-rimordbok/issues/new" target="_blank" rel="noopener">"issue"</a> på
