Fix dead link to ARU Stories, as their website has been removed

--- a/templates/index.html
+++ b/templates/index.html
@@ -60,7 +60,7 @@
 </p>
 <p>
   Nettstaden er laga i samband med diktinga til
-  <a href="https://arustories.com" target="_blank" rel="noopener">ARU Stories</a>.
+  <a href="https://www.facebook.com/StoriesARU/" target="_blank" rel="noopener">ARU Stories</a>.
   Hos ARU Stories kan ein lese og høyre små historiar og dikt for
   store og små, samt lese små teikneseriestriper og sjå korte videosnuttar.
 </p>
@@ -92,7 +92,6 @@
     <h4>Nynorsk Rimordbok</h4>
     <ul>
       <li><a href="/">Om Nynorsk Rimordbok</a></li>
-      <li><a href="https://arustories.com" target="_blank" rel="noopener">arustories.com</a></li>
     </ul>
   </div>
 </footer>
